--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "FabaMore - Do more with your Faba or Faba+",
   "version": "1.3",
   "manifest_version": 3,
-  "description": "Permits to show an upload field to directly load a .wav or .mp3 instead of recording it. MP3 files are converted to WAV automatically.",
+  "description": "Permits to show an upload field to directly load a .wav or .mp3 instead of recording it.",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
