--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "js": ["assets/js/sweetalert2@11.min.js","content.js"],
       "run_at": "document_idle"
     }
   ],
