--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
     {
       "matches": ["<all_urls>"],
       "js": ["assets/js/sweetalert2@11.min.js","content.js"],
+      "css": ["assets/css/app.css"],
       "run_at": "document_idle"
     }
   ],
